@@ -86,6 +86,10 @@
          "file" : "lib/Perl/Critic/Policy/Freenode/OpenArgs.pm",
          "version" : "0.012"
       },
+      "Perl::Critic::Policy::Freenode::POSIXImports" : {
+         "file" : "lib/Perl/Critic/Policy/Freenode/POSIXImports.pm",
+         "version" : "0.012"
+      },
       "Perl::Critic::Policy::Freenode::Prototypes" : {
          "file" : "lib/Perl/Critic/Policy/Freenode/Prototypes.pm",
          "version" : "0.012"
