@@ -181,7 +181,7 @@ in perl v5.22.0. Use C<m?PATTERN?> instead.
 
 Using the function C<defined()> on an array or hash probably does not do what
 you expected, and is deprecated in perl v5.6.2 and throws a fatal error in perl
-v5.22.0. To check if an array or hash is non-empty, test the variable directly.
+v5.22.0. To check if an array or hash is non-empty, test if it has elements.
 
  if (@foo) { ... }
  if (keys %bar) { ... }
