@@ -1,5 +1,7 @@
 {{$NEXT}}
   - add IO::Socket::INET6 to discouraged modules
+  - Fix EmptyReturn to avoid reporting violations in void context functions
+  - Add POSIXImports policy
 
 0.011     2015-09-15 13:32:44 EDT
   - add Getopt::Std to discouraged modules
